new similarity check

--- a/66Days_Tweet_generator.ipynb
+++ b/66Days_Tweet_generator.ipynb
@@ -1321,7 +1321,7 @@
         "import pandas as pd\n",
         "import numpy as np"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1332,7 +1332,7 @@
       "source": [
         "tweet_data = pd.read_csv('/content/drive/MyDrive/66Days-Generator/finalData.csv')"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1348,7 +1348,7 @@
       "source": [
         "tweet_data"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1476,7 +1476,7 @@
         "  print('yes')\n",
         "else: print('no')"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1509,7 +1509,7 @@
         "# get the nlp model\n",
         "!python -m spacy download en_core_web_md"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1562,7 +1562,7 @@
         "# load the language model\n",
         "nlp = spacy.load(\"en_core_web_md\")"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1580,7 +1580,7 @@
         "doc2 = nlp(\"\"\"How do I turn tv on/of?\"\"\")\n",
         "doc1.similarity(doc2)"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1611,7 +1611,7 @@
         "  score_ = doc1.similarity(nlp(tweet_data.full_text[x]))    \n",
         "  similarity_scores.append(score_)"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1628,7 +1628,7 @@
         "# higher better so generated tweet is similar to real tweet\n",
         "sum(similarity_scores) / len(similarity_scores)"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1656,7 +1656,7 @@
       "source": [
         "max(similarity_scores)"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1685,7 +1685,7 @@
         "# https://stackoverflow.com/questions/2474015/getting-the-index-of-the-returned-max-or-min-item-using-max-min-on-a-list\n",
         "max(range(len(similarity_scores)), key=similarity_scores.__getitem__)"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1713,7 +1713,7 @@
       "source": [
         "min(range(len(similarity_scores)), key=similarity_scores.__getitem__)"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1741,7 +1741,7 @@
       "source": [
         "similarity_scores[646]"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1770,7 +1770,7 @@
       "source": [
         "tweet_data.full_text[646]"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1802,7 +1802,7 @@
       "source": [
         "tweet_data.full_text[789]"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1833,7 +1833,7 @@
       "source": [
         "min(similarity_scores)"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1861,7 +1861,7 @@
       "source": [
         "similarity_scores[789]"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1900,7 +1900,7 @@
         "    result = [token.text for token in doc if token.text not in nlp.Defaults.stop_words]\n",
         "    return \" \".join(result)"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1917,7 +1917,7 @@
         "text = \"\"\"Day 3 of #66daysofdata. I used the time to brush up on some statistics.I learnt about the distributions and different means of doing the EDA. I also interacted with some datasets and played around with them.\"\"\"\n",
         "remove_stopwords_fast(text)"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1949,7 +1949,7 @@
         "  score_ = doc1.similarity(nlp(remove_stopwords_fast(tweet_data.full_text[x])))    \n",
         "  similarity_scores_stop.append(score_)"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1965,7 +1965,7 @@
         "# removing stop words reduced the similarity of 10 percent points\n",
         "sum(similarity_scores_stop) / len(similarity_scores_stop)"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1993,7 +1993,7 @@
       "source": [
         "max(similarity_scores_stop)"
       ],
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2021,7 +2021,7 @@
       "source": [
         "max(range(len(similarity_scores)), key=similarity_scores.__getitem__)"
       ],
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2050,7 +2050,7 @@
       "source": [
         "remove_stopwords_fast(tweet_data.full_text[646])"
       ],
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2085,15 +2085,217 @@
         "id": "XDhQkGiIg6LB"
       },
       "source": [
-        "Google's Universal Sentence Encoder: https://tfhub.dev/google/universal-sentence-encoder/2. \n",
+        "Google's Universal Sentence Encoder: https://tfhub.dev/google/universal-sentence-encoder/4. \n",
         "\n",
         "Facebook's Infersent Encoder: https://github.com/facebookresearch/InferSent"
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "dMjodx43mhoB"
+      },
+      "source": [
+        "## Google's Universal Sentence Encoder\n",
+        ">  encodes text into high-dimensional vectors that can be used for text classification, semantic similarity, clustering and other natural language tasks.\n",
+        "\n",
+        "- traind and optimaized for greater-then-word length text\n",
+        "- INPUT: English text of variable length\n",
+        "- OUTUPU: a 512 dimensional vector \n",
+        "\n",
+        "- no preprocessing is necessary (stop word removal)"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "ThOcLgkhe_Po"
+        "id": "ThOcLgkhe_Po",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "73f6862b-02ea-46b7-9e73-a05e011cb300"
+      },
+      "source": [
+        "# load the the model\n",
+        "from absl import logging\n",
+        "\n",
+        "import tensorflow as tf\n",
+        "\n",
+        "import tensorflow_hub as hub\n",
+        "import matplotlib.pyplot as plt\n",
+        "import numpy as np\n",
+        "import os\n",
+        "import pandas as pd\n",
+        "import re\n",
+        "import seaborn as sns\n",
+        "\n",
+        "module_url = \"https://tfhub.dev/google/universal-sentence-encoder/4\"\n",
+        "model = hub.load(module_url)\n",
+        "print (\"module %s loaded\" % module_url)\n",
+        "def embed(input):\n",
+        "  return model(input)"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "module https://tfhub.dev/google/universal-sentence-encoder/4 loaded\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OOE3MBrIom17"
+      },
+      "source": [
+        "tweet_data = pd.read_csv('/content/drive/MyDrive/66Days-Generator/finalData.csv')"
+      ],
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xwlOaP6eoqIy"
+      },
+      "source": [
+        "# choose tweet 646 since it had the hightest similrity score using spaCy\n",
+        "real_tweet = tweet_data.full_text[646]\n",
+        "# generated tweet\n",
+        "generated_tweet = \"\"\"Day 3 of #66daysofdata. I used the time to brush up on some statistics.I learnt about the distributions and different means of doing the EDA. I also interacted with some datasets and played around with them.\"\"\"\n",
+        "tweets = [real_tweet, generated_tweet]"
+      ],
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "S5pM9RDVnkXA"
+      },
+      "source": [
+        "# Reduce logging outpur\n",
+        "logging.set_verbosity(logging.ERROR)\n",
+        "\n",
+        "# compute the embeddigns\n",
+        "message_embeddings = embed(tweets)"
+      ],
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eXun9-CfppIF",
+        "outputId": "ddf3e09e-7a5c-4981-c3f1-8b25cc785486"
+      },
+      "source": [
+        "message_embeddings"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(2, 512), dtype=float32, numpy=\n",
+              "array([[-0.01785527, -0.06353536,  0.01804276, ...,  0.08779907,\n",
+              "        -0.05331371, -0.06075975],\n",
+              "       [-0.03645666, -0.04723918, -0.03063959, ...,  0.09627496,\n",
+              "        -0.03469933, -0.06400408]], dtype=float32)>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ST1tgUUYpqNb",
+        "outputId": "4e1c735f-aed8-42e7-fb76-cd93e20d56b0"
+      },
+      "source": [
+        "for i, message_embedding in enumerate(np.array(message_embeddings).tolist()):\n",
+        "  print(\"Message: {}\".format(tweets[i]))\n",
+        "  print(\"Embedding size: {}\".format(len(message_embedding)))\n",
+        "  message_embedding_snippet = \", \".join(\n",
+        "      (str(x) for x in message_embedding[:3]))\n",
+        "  print(\"Embedding: [{}, ...]\\n\".format(message_embedding_snippet))"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Message: Day 6 of #66daysofdataToday I performed Exploratory Data Analysis on Telco's Churn dataset. I really like that domain. I have seen other's kaggle kernels, and I realized that I have to learn doing some advanced visualizations. I also make note of the packages used. @KenJee_DS\n",
+            "Embedding size: 512\n",
+            "Embedding: [-0.017855273559689522, -0.06353535503149033, 0.01804276369512081, ...]\n",
+            "\n",
+            "Message: Day 3 of #66daysofdata. I used the time to brush up on some statistics.I learnt about the distributions and different means of doing the EDA. I also interacted with some datasets and played around with them.\n",
+            "Embedding size: 512\n",
+            "Embedding: [-0.03645665571093559, -0.04723918065428734, -0.030639585107564926, ...]\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "EB008ZRWpzmH",
+        "outputId": "ad95e773-6f4c-4ffd-aead-8454fe34593e"
+      },
+      "source": [
+        "# The semantic similarity of two sentences can be trivially computed as the inner product of the encodings\n",
+        "np.inner(message_embeddings[0], message_embeddings[1])"
+      ],
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.5870047"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "8mRqkhLpq6Fu"
+      },
+      "source": [
+        "This is compared to the score form sypCy quite low, showing the stated limitiations of the approch from spaCy"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "q8qUFvQcqc3u"
       },
       "source": [
         ""
