--- a/66Days_Tweet_generator.ipynb
+++ b/66Days_Tweet_generator.ipynb
@@ -23,9 +23,9 @@
       "source": [
         "# Tweet-generator for #66DaysofData\n",
         "\n",
-        "In this notebook I will train a <a href=\"https://openai.com/blog/better-language-models/\">GTP-2</a> model with collected tweets. I collected almost 15000 tweets form the #66DayofData-challenge on Twitter. You can read about the process on my <a href=\"https://markusmueller-ds.github.io/portfolio/66days_analysis.html\">website</a>. The goal is to create a tweet generator based on this dataset.\n",
+        "In this notebook I will train a <a href=\"https://openai.com/blog/better-language-models/\">GPT-2</a> model with collected tweets. I collected almost 15000 tweets form the #66DayofData-challenge on Twitter. You can read about the process on my <a href=\"https://markusmueller-ds.github.io/portfolio/66days_analysis.html\">website</a>. The goal is to create a tweet generator based on this dataset.\n",
         "\n",
-        "The creator of the <a href=\"https://github.com/minimaxir/gpt-2-simple\">gtp-2-simple</a> libary publisched a great <a href=\"https://minimaxir.com/2020/01/twitter-gpt2-bot/\">blog post</a> explaining the process of using GTP-2 to create a tweet generator. \n",
+        "The creator of the <a href=\"https://github.com/minimaxir/gpt-2-simple\">gtp-2-simple</a> libary publisched a great <a href=\"https://minimaxir.com/2020/01/twitter-gpt2-bot/\">blog post</a> explaining the process of using GPT-2 to create a tweet generator. \n",
         "\n",
         "### What is GPT-2?\n",
         "> GPT-2 is a large transformer-based language model with 1.5 billion parameters, trained on a dataset of 8 million web pages (40GB text data).\n",
